Update: 에디터 UI 및 기능 개선

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ yarn-error.log*
 PROJECT_STRUCTURE.md
 SECURITY_INCIDENT_RESPONSE.md
 FIREBASE_SECURITY_SETUP.md
+item-canvas-management.md
 prd.txt
 **/SETUP*.md
 **/DEPLOYMENT*.md
